0.3 (2008/10/11)

 Evolution machinery moved to ``repoze.evolution``.

 Workflow machinery moved to ``repoze.workflow``.

 Folder machinery moved to ``repoze.folder``.

 (Remaining: content registrations)

0.2 (2008/10/05)

  Added ``evolution`` module; useful to evolve ZODB and other
  persistent data structures in lockstep with code changes.  Needs
  documentation.

0.1

  Initial release.
