@@ -8,6 +8,8 @@ class provides:
     def __init__(self, iface):
         directlyProvides(self, iface)
 
+_marker = ()
+
 def create_content(iface, *arg, **kw):
     """ Create an instance of the content type related to ``iface``,
     by calling its factory, passing ``*arg`` and ``**kw`` to the factory.
@@ -16,7 +18,7 @@ def create_content(iface, *arg, **kw):
     factory = getAdapter(provides(iface), IContentFactory)
     return factory(*arg, **kw)
 
-def get_content_types(context=None):
+def get_content_types(context=_marker):
     """ Return a sequence of interface objects that have been
     registered as content types.  If ``context`` is used, return only
     the content_type interfaces which are provided by the context."""
@@ -25,9 +27,24 @@ def get_content_types(context=None):
     for reg in gsm.registeredAdapters():
         if reg.provided is IContentFactory:
             iface = reg.required[0]
-            if not context:
+            if context is _marker:
                 types.append(iface)
             elif iface.providedBy(context):
                 types.append(iface)
     return types
         
+def get_content_type(context):
+    types = get_content_types(context)
+    if len(types) > 1:
+        raise ValueError('%r has more than one content type (%s)' %
+                         (context, types))
+    if not types:
+        raise ValueError('%s is not content' % context)
+        
+    return types[0]
+
+def is_content(model):
+    """ Return True if the model object provides any interface
+    registered as a content type, False otherwise. """
+    return bool(get_content_types(model))
+
